--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,7 +36,7 @@
     </filter>
     <filter-mapping>
         <filter-name>freeMarkerFilter</filter-name>
-        <url-pattern>*</url-pattern>
+        <url-pattern>/ftl/*</url-pattern>
     </filter-mapping>
 
 </web-app>
